--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -6,12 +6,15 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="300">
-    <Grid>
+    <Grid Background="#FF6AA9CA">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="73*" />
+            <ColumnDefinition Width="23*" />
+            <ColumnDefinition Width="50*"/>
             <ColumnDefinition Width="74*" />
-            <ColumnDefinition Width="87*" />
-            <ColumnDefinition Width="66*" />
+            <ColumnDefinition Width="12*" />
+            <ColumnDefinition Width="75*"/>
+            <ColumnDefinition Width="11*" />
+            <ColumnDefinition Width="55*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -22,42 +25,42 @@
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
-        
+
         <!-- Buttons -->
-        <Button Grid.Row ="3" Grid.Column="0" x:Name="btn_7" Click="OnButtonClick">7</Button>
-        <Button Grid.Row ="3" Grid.Column="1" x:Name="btn_8" Click="OnButtonClick">8</Button>
-        <Button Grid.Row ="3" Grid.Column="2" x:Name="btn_9" Click="OnButtonClick">9</Button>
+        <Button Grid.Row ="2" Grid.Column="0" x:Name="btn_7" Click="OnButtonClick" Background="#FF989898" Grid.ColumnSpan="2" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">7</Button>
+        <Button Grid.Row ="2" Grid.Column="2" x:Name="btn_8" Click="OnButtonClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">8</Button>
+        <Button Grid.Row ="2" Grid.Column="3" x:Name="btn_9" Click="OnButtonClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">9</Button>
 
-        <Button Grid.Row ="4" Grid.Column="0" x:Name="btn_4" Click="OnButtonClick">4</Button>
-        <Button Grid.Row ="4" Grid.Column="1" x:Name="btn_5" Click="OnButtonClick">5</Button>
-        <Button Grid.Row ="4" Grid.Column="2" x:Name="btn_6" Click="OnButtonClick">6</Button>
+        <Button Grid.Row ="3" Grid.Column="0" x:Name="btn_4" Click="OnButtonClick" Background="#FF989898" Grid.ColumnSpan="2" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">4</Button>
+        <Button Grid.Row ="3" Grid.Column="2" x:Name="btn_5" Click="OnButtonClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">5</Button>
+        <Button Grid.Row ="3" Grid.Column="3" x:Name="btn_6" Click="OnButtonClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">6</Button>
 
-        <Button Grid.Row ="5" Grid.Column="0" x:Name="btn_3" Click="OnButtonClick">1</Button>
-        <Button Grid.Row ="5" Grid.Column="1" x:Name="btn_2" Click="OnButtonClick">2</Button>
-        <Button Grid.Row ="5" Grid.Column="2" x:Name="btn_1" Click="OnButtonClick">3</Button>
-        <Button Grid.Row ="6" Grid.Column="1" x:Name="btn_0" Click="OnButtonClick">0</Button>
+        <Button Grid.Row ="4" Grid.Column="0" x:Name="btn_3" Click="OnButtonClick" Background="#FF989898" Grid.ColumnSpan="2" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">1</Button>
+        <Button Grid.Row ="4" Grid.Column="2" x:Name="btn_2" Click="OnButtonClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">2</Button>
+        <Button Grid.Row ="4" Grid.Column="3" x:Name="btn_1" Click="OnButtonClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">3</Button>
+        <Button Grid.Row ="5" Grid.Column="2" x:Name="btn_0" Click="OnButtonClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">0</Button>
 
         <!-- Operations -->
 
-        <Button Grid.Row ="1" Grid.Column="0" x:Name="btn_min" Click="OnButtonOperationClick">min</Button>
-        <Button Grid.Row ="1" Grid.Column="1" x:Name="btn_max" Click="OnButtonOperationClick">max</Button>
-        <Button Grid.Row ="1" Grid.Column="2" x:Name="btn_avg" Click="OnButtonOperationClick">avg</Button>
-        <Button Grid.Row ="1" Grid.Column="3" x:Name="btn_pow" Click="OnButtonOperationClick">x^y</Button>
-        <Button Grid.Row ="2" Grid.Column="3" x:Name="btn_div" Click="OnButtonOperationClick">/</Button>
-        <Button Grid.Row ="3" Grid.Column="3" x:Name="btn_mul" Click="OnButtonOperationClick">*</Button>
-        <Button Grid.Row ="4" Grid.Column="3" x:Name="btn_sub" Click="OnButtonOperationClick">-</Button>
-        <Button Grid.Row ="5" Grid.Column="3" x:Name="btn_add" Click="OnButtonOperationClick">+</Button>
-        <Button Grid.Row ="6" Grid.Column="3" x:Name="btn_eq" Click="Btn_eq_Click">=</Button>
-        <Button Grid.Row ="6" Grid.Column="2" x:Name="btn_comma" Click="btn_comma_Click">,</Button>
-        <Button Grid.Row ="6" Grid.Column="0" x:Name="btn_plusMinus" Click="btn_plusMinus_Click">+-</Button>
+        <Button Grid.Column="0" x:Name="btn_min" Click="OnButtonOperationClick" Background="#FF989898" Grid.ColumnSpan="2" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">min</Button>
+        <Button Grid.Column="2" x:Name="btn_max" Click="OnButtonOperationClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">max</Button>
+        <Button Grid.Column="3" x:Name="btn_avg" Click="OnButtonOperationClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">avg</Button>
+        <Button Grid.Column="5" x:Name="btn_pow" Click="OnButtonOperationClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">x^y</Button>
+        <Button Grid.Row ="1" Grid.Column="5" x:Name="btn_div" Click="OnButtonOperationClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">/</Button>
+        <Button Grid.Row ="2" Grid.Column="5" x:Name="btn_mul" Click="OnButtonOperationClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">*</Button>
+        <Button Grid.Row ="3" Grid.Column="5" x:Name="btn_sub" Click="OnButtonOperationClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">-</Button>
+        <Button Grid.Row ="4" Grid.Column="5" x:Name="btn_add" Click="OnButtonOperationClick" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">+</Button>
+        <Button Grid.Row ="5" Grid.Column="5" x:Name="btn_eq" Click="Btn_eq_Click" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">=</Button>
+        <Button Grid.Row ="5" Grid.Column="3" x:Name="btn_comma" Click="btn_comma_Click" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">,</Button>
+        <Button Grid.Row ="5" Grid.Column="0" x:Name="btn_plusMinus" Click="btn_plusMinus_Click" Background="#FF989898" Grid.ColumnSpan="2" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">+-</Button>
 
         <!-- Clear buttons -->
 
-        <Button Grid.Row ="2" Grid.Column="0" x:Name="btn_clean" Click="btn_clean_Click">C</Button>
-        <Button Grid.Row ="2" Grid.Column="1" x:Name="btn_cleanEntry" Click="btn_cleanEntry_Click">CE</Button>
-        <Button Grid.Row ="2" Grid.Column="2" x:Name="btn_backSpace" Content="&lt;=" Click="btn_backSpace_Click"></Button>
+        <Button Grid.Row ="1" Grid.Column="0" x:Name="btn_clean" Click="btn_clean_Click" Background="#FF989898" Grid.ColumnSpan="2" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">C</Button>
+        <Button Grid.Row ="1" Grid.Column="2" x:Name="btn_cleanEntry" Click="btn_cleanEntry_Click" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14">CE</Button>
+        <Button Grid.Row ="1" Grid.Column="3" x:Name="btn_backSpace" Content="&lt;=" Click="btn_backSpace_Click" Background="#FF989898" Margin="0,62,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic" FontSize="14"/>
 
         <!-- TextBox-->
-        <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" TextAlignment="Right" VerticalAlignment="Bottom" FontSize="40" x:Name="textValue"></TextBox>
+        <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="7" TextAlignment="Right" VerticalAlignment="Bottom" FontSize="40" x:Name="textValue" Background="#FF6AA9CA" FontWeight="Bold" FontFamily="Britannic Bold" FontStyle="Italic"></TextBox>
     </Grid>
 </Window>
